# formulas

./: Makefile  README.rst  autoloader.php  box.json  cli-config.php  create-phar.php  create-phar.sh  genFormulas.sh  generate_formulas-2000.sh  generate_formulas.sh  mcc.php  pattern.xml  test_for_fabrice.sh  verification.sh
doc/: Finalize_xml_formulas.sh  iterate-conversion.sh  mccproperty.doxygen  mccproperty.full.xsd  mccproperty.g  mccproperty.xsd  parser.hxx  read-xml.cc  txt-to-xml.cc  xsd-to-src.sh
doc/manual/: Makefile  README.rst  main.tex  mcc-properties.rnc  mcc-properties.xsd
grammar/: formulas.rnc
smc/: formula.xml  ptnet.py  smc.py
spot/: .dir-locals.el  AUTHORS  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.h.in  configure  configure.ac
spot/bench/: Makefile.in
spot/bench/dtgbasat/: Makefile.in  gen.py
spot/bench/emptchk/: Makefile.in
spot/bench/ltl2tgba/: Makefile.in  defs.in
spot/bench/ltlclasses/: Makefile.in
spot/bench/ltlcounter/: Makefile.in
spot/bench/spin13/: Makefile.in
spot/bench/stutter/: Makefile.in
spot/bench/wdba/: Makefile.in
spot/buddy/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure
spot/buddy/doc/: Makefile.in
spot/buddy/examples/: Makefile.in
spot/buddy/src/: Makefile.in  bddop.c  bddx.h  kernel.c
spot/debian/: changelog  control  copyright  rules
spot/debian/source/: lintian-overrides
spot/doc/: Doxyfile.in  Makefile.am  Makefile.in
spot/doc/org/: .dir-locals.el.in  autcross.org  autfilt.org  citing.org  compile.org  concepts.org  csv.org  dstar2tgba.org  genaut.org  genltl.org  hierarchy.org  hoa.org  index.org  init.el.in  install.org  ioltl.org  ltl2tgba.org  ltl2tgta.org  ltlcross.org  ltldo.org  ltlfilt.org  ltlgrind.org  ltlsynt.org  oaut.org  randaut.org  randltl.org  satmin.org  setup.org  tools.org  tut.org  tut01.org  tut02.org  tut03.org  tut04.org  tut10.org  tut11.org  tut20.org  tut21.org  tut22.org  tut23.org  (+6 more)
spot/doc/tl/: Makefile.am  Makefile.in  tl.bib  tl.tex
spot/doc/userdoc/: autcross.html  autfilt.html  citing.html  compile.html  concepts.html  csv.html  dstar2tgba.html  genaut.html  genltl.html  hierarchy.html  hoa.html  index.html  install.html  ioltl.html  ltl2tgba.html  ltl2tgta.html  ltlcross.html  ltldo.html  ltlfilt.html  ltlgrind.html  ltlsynt.html  oaut.html  randaut.html  randltl.html  satmin.html  sitemap.html  spot.css  tools.html  tut.html  tut01.html  tut02.html  tut03.html  tut04.html  tut10.html  tut11.html  tut20.html  tut21.html  tut22.html  tut23.html  tut24.html  (+5 more)
spot/elisp/: Makefile.am  Makefile.in  README
spot/lib/: Makefile.am  Makefile.in  argp.h
spot/ltdl/: Makefile.in  configure
spot/m4/: gnulib-cache.m4  gnulib-comp.m4
spot/picosat/: Makefile.in
spot/python/: Makefile.am  Makefile.in  buddy.py  buddy_wrap.cxx
spot/python/ajax/: Makefile.am  Makefile.in  README  spotcgi.in  trans.html
spot/python/ajax/css/: trans.css
spot/python/spot/: __init__.py  aux.py  gen.i  gen.py  gen_wrap.cxx  impl.i  impl.py  ltsmin.py  ltsmin_wrap.cxx
spot/spot/: Makefile.in
spot/spot/graph/: Makefile.am  Makefile.in  graph.hh
spot/spot/kripke/: Makefile.am  Makefile.in  fairkripke.cc  kripke.cc  kripkegraph.hh
spot/spot/ltsmin/: Makefile.am  Makefile.in  ltsmin.cc  ltsmin.hh
spot/spot/misc/: Makefile.am  Makefile.in  bitvect.cc  bitvect.hh  common.hh  escape.cc  escape.hh  fixpool.hh  game.cc  game.hh  hash.hh  hashfunc.hh  minato.hh  mspool.hh  optionmap.cc  satsolver.cc  satsolver.hh  timer.hh  tmpfile.cc  trival.hh
spot/spot/parseaut/: Makefile.am  Makefile.in  fmterror.cc  parseaut.cc  parseaut.hh  parseaut.yy  scanaut.cc  scanaut.ll  stack.hh
spot/spot/parsetl/: Makefile.am  Makefile.in  fmterror.cc  parsetl.cc  parsetl.hh  parsetl.yy  scantl.cc  scantl.ll  stack.hh
spot/spot/priv/: Makefile.am  Makefile.in  accmap.hh  bddalloc.cc  bddalloc.hh  freelist.cc  freelist.hh  satcommon.cc  satcommon.hh  trim.cc  weight.cc
spot/spot/ta/: Makefile.am  Makefile.in  ta.cc  ta.hh  taexplicit.cc  taexplicit.hh  taproduct.cc  tgtaexplicit.cc  tgtaproduct.cc
spot/spot/taalgos/: Makefile.am  Makefile.in  dot.cc  emptinessta.cc  emptinessta.hh  minimize.cc  minimize.hh  reachiter.cc  statessetbuilder.cc  stats.cc  tgba2ta.cc  tgba2ta.hh
spot/spot/tl/: Makefile.am  Makefile.in  apcollect.cc  contain.cc  declenv.cc  defaultenv.cc  dot.cc  exclusive.cc  formula.cc  formula.hh  hierarchy.cc  hierarchy.hh  length.cc  ltlf.cc  mark.cc  mutation.cc  nenoform.cc  print.cc  randomltl.cc  randomltl.hh  relabel.cc  relabel.hh  remove_x.cc  remove_x.hh  simplify.cc  simplify.hh  snf.cc  snf.hh  unabbrev.cc
spot/spot/twa/: Makefile.am  Makefile.in  acc.cc  acc.hh  bdddict.cc  bddprint.cc  formula2bdd.cc  fwd.hh  taatgba.cc  taatgba.hh  twa.cc  twa.hh  twagraph.cc  twagraph.hh  twaproduct.cc  twaproduct.hh
spot/spot/twaalgos/: Makefile.am  Makefile.in  aiger.cc  alternation.cc  alternation.hh  are_isomorphic.cc  bfssteps.cc  canonicalize.cc  cleanacc.cc  cleanacc.hh  cobuchi.cc  cobuchi.hh  complement.cc  complement.hh  complete.cc  compsusp.cc  compsusp.hh  couvreurnew.cc  cycles.cc  cycles.hh  degen.cc  determinize.cc  determinize.hh  dot.cc  dtbasat.cc  dtwasat.cc  dtwasat.hh  dualize.cc  dualize.hh  emptiness.cc  emptiness.hh  gv04.cc  gv04.hh  hoa.cc  iscolored.cc  isdet.cc  isdet.hh  isunamb.cc  isunamb.hh  isweakscc.cc  (+61 more)
spot/tests/: Makefile.am  Makefile.in  run.in
spot/tests/core/: acc.cc  acc.test  acc_word.test  accsimpl.test  alternating.test  autcross.test  autcross2.test  bdd.test  bitvect.cc  checkpsl.cc  checkta.cc  complement.test  consterm.cc  dca.test  dca2.test  degenid.test  degenscc.test  det.test  dra2dba.test  dstar.test  (+72 more)
templates/: reachability-deadlock.xml  reachability-fireability.xml
trunk/: Bootstrap.php  TODO  check.sh  composer.json  create-phar.sh  mcc.php  pom.xml
trunk/grammar/: formulas.rnc
(+144 files in other folders)
